--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Pneuma</string>
     <string name="drawer_open">Drawer open</string>
     <string name="drawer_closer">Drawer close</string>
+    <string name="twitter">\@</string>
 </resources>
